# minish-cap-lite

./: CMakeLists.txt  README.md  camera.cpp  camera.h  gameconfig.h  gamemap.cpp  gamemap.h  mainwindow.cpp  mainwindow.h  overlayobject.cpp  overlayobject.h  player.cpp  player.h  resources.qrc
